KUBESMANIFESTS_DIR/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-appfe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecom-frontend
  template:
    metadata:
      labels:
        app: ecom-frontend
    spec:
      containers:
        - name: ecom-frontend
          image: z0sun/webstorefront:2.0
          ports:
            - name: http
              containerPort: 3000
