KUBESMANIFESTS_DIR/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecomfe-service-nodeport
spec:
  type: NodePort
  selector:
    app: ecom-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
