KUBESMANIFESTS_DIR/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ecom-ingress
    annotations:
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/target-type: instance
        alb.ingress.kubernetes.io/tags: Environment=staging
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecomfe-service-nodeport
                port:
                  number: 80
